--- a/studyflask/templates/common/base.html
+++ b/studyflask/templates/common/base.html
@@ -3,10 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome - Study Flask!</title>
+    <link rel="stylesheet" href="{{ build_static_url('/plugins/bootstrap_v3/css/bootstrap.min.css') }}">
+    {% block css %}
+    {% endblock %}
 </head>
 <body>
+<nav class="navbar navbar-inverse" style="border-radius: 0px">
+    <div class="container-fluid">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                    data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="{{ build_url('/') }}">猫影</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="{{ build_url('/') }}">影视</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user %}
+                <li><a href="javascript:void(0);">{{ current_user.nickname }}</a></li>
+                <li><a href="{{ build_url('/member/logout') }}">注销</a></li>
+                {% else %}
+                <li><a href="{{ build_url('/member/register') }}">注册</a></li>
+                <li><a href="{{ build_url('/member/login') }}">登录</a></li>
+                {% endif %}
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+</nav>
+<div class="container" style="min-height: 600px">
 {% block content %}
 {% endblock %}
-<footer>&copy; 2020</footer>
+</div>
+<footer class="text-center">&copy; 2020</footer>
+<script src="{{ build_static_url('/plugins/bootstrap_v3/jquery.min.js') }}"></script>
+<script src="{{ build_static_url('/plugins/bootstrap_v3/js/bootstrap.min.js') }}"></script>
+<script src="{{ build_static_url('/plugins/layer/layer.js') }}"></script>
+<script src="{{ build_static_url('/js/common.js') }}"></script>
+{% block js %}
+{% endblock %}
 </body>
 </html>
