--- a/studyflask/templates/index.html
+++ b/studyflask/templates/index.html
@@ -1,10 +1,11 @@
 {% extends "common/base.html" %}
 {% block content %}
-{% for value in result %}
-    {{ value["bid"] }}
-    {{ value["bname"] }}
-    {{ value["price"] }}
-    {{ value["btypeid"] }}
-    <br />
-{% endfor %}
+{% if current_user %}
+    {{ current_user.login_name }}
+    {{ current_user.nickname }}
+    {{ current_user.status }}
+    {{ current_user.email }}
+    {{ current_user.created_time }}
+    {{ current_user.updated_time }}
+{% endif %}
 {% endblock %}
